# gtest_ci

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: main.cpp  sum.cpp  sum.h
test/: sum_test.cpp
